# finetune-translate

./: .gitignore  annotations_cache.jsonl  examples.parquet  finetune.py  pyproject.toml  sentence_annotations.parquet  sql.py  training_set.parquet  vocab.parquet  word_annotations.parquet
Japanese_Core_1000_Vocab__Pitch_Accent/: collection.anki2  media
Japanese_Core_2000_Vocab__Pitch_Accent/: collection.anki2  media
Japanese_Core_3000_Vocab__Pitch_Accent/: collection.anki2  media
Japanese_Core_4000_Vocab__Pitch_Accent/: collection.anki2  media
Japanese_Core_5000_Vocab__Pitch_Accent/: collection.anki2  media
Japanese_Core_6000_Vocab__Pitch_Accent/: collection.anki2  media
